# wechat-chatlog-studio

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
scripts/: chatlog.bat  chatlog_tool.py  chatlog_visual.py  wechat4_key_probe.py
src/chatlog_studio/: __init__.py  __main__.py  cli.py  core.py  visual.py  wechat4_key_probe.py  wechat_paths.py
src/chatlog_studio/webui/: app.js  i18n.js  index.html  styles.css
tests/: conftest.py  test_message_direction.py  test_sensitive_path_redaction.py  test_visual_account_selection.py  test_wechat_source_resolution.py
